Closed Bug 250692 Opened 22 years ago Closed 22 years ago

Unable to make selection, drag text or place the cursor with mouse on Netscape.com's Webmail - among other sites. Form textarea.

Categories

(Core :: Layout: Form Controls, defect, P1)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: stephend, Assigned: aaronlev)

References

()

Details

(Keywords: regression)

Attachments

(3 files)

Build ID: 2004-07-09-07, Windows XP Seamonkey trunk. Summary: Unable to make selection or place the cursor with mouse on Netscape.com's Webmail. Steps to Reproduce: 1. Login to Netscape.com's Webmail at http://ncmail.netscape.com 2. Click on a message, select Reply 3. Try to select text with the mouse, or place the cursor somewhere with the mouse. Actual Results: Doesn't work. Expected Results: You should be able to use the mouse to position the cursor and also make text selection.
Aaron, sorry to point fingers. Any idea what's going on, here?
This broke sometime between: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a2) Gecko/20040706 and Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a2) Gecko/20040707
also seen on linux/gtk2, os->all
OS: Windows XP → All
Flags: blocking1.8a2?
I'm sure it's my regression. Will get to it in the next few days.
Assignee: nobody → aaronleventhal
Priority: -- → P1
Hardware: PC → All
bug 250640 may be the same
*** Bug 250640 has been marked as a duplicate of this bug. ***
*** Bug 250191 has been marked as a duplicate of this bug. ***
*** Bug 250748 has been marked as a duplicate of this bug. ***
*** Bug 250883 has been marked as a duplicate of this bug. ***
Tweaking summary. It's not just netscape.com, I've seen it on other sites too - like Mozillazine.
Summary: Unable to make selection or place the cursor with mouse on Netscape.com's Webmail. → Unable to make selection or place the cursor with mouse on Netscape.com's Webmail - among other site's. Form textarea.
(In reply to comment #11) > Tweaking summary. It's not just netscape.com, I've seen it on other sites too - > like Mozillazine. if tweaking the summary, please consider my summary for bug 250191 (btw: as you can see from the bug number, this one is the dup ;-) ) this bug is absolutely independent of the site viewed - it occurs on ANY site. in fact, it is even unrelated to web browsing. it is impossible to change focus in ANY mozilla window to ANY window element (e.g. also in the preferences window, the bookmark manager etc.) and also impossible to select ANY text in ANY mozilla window, not just in web-forms. i'm not too much into mozilla's internal development structure, but i think this bug belongs to "event handling" rather than "layout: form controls".
> this bug is absolutely independent of the site viewed - it occurs on ANY > site. Actually, that's not true. I can use my mouse to move the selection point here on b.m.o itself - I'm doing so as I type this message...
(In reply to comment #13) > > this bug is absolutely independent of the site viewed - it occurs on ANY > > site. > > Actually, that's not true. I can use my mouse to move the selection point here > on b.m.o itself - I'm doing so as I type this message... well, i cannot. i am using build 2004070618 on linux i686. are you sure we are observing the same bug or should bug 250191 be reopened?
> well, i cannot. i am using build 2004070618 on linux i686. I'm using 7/11-08 under Windows XP. It may be that placing the selection point has more of a problem under Linux than under Windows. Or it could be two different bugs with similar symptoms - it's hard to say.
(In reply to comment #15) > > well, i cannot. i am using build 2004070618 on linux i686. > > I'm using 7/11-08 under Windows XP. It may be that placing the selection point > has more of a problem under Linux than under Windows. Or it could be two > different bugs with similar symptoms - it's hard to say. Please don't reopen any bugs if other people using later builds aren't experiencing the same problem, unless you try the later build. I believe the textarea's with problems have a tabindex set.
the bug is caused by the "tabindex" attribute of the textarea. maybe related to bug 171366.
Summary: Unable to make selection or place the cursor with mouse on Netscape.com's Webmail - among other site's. Form textarea. → Unable to make selection, drag text or place the cursor with mouse on Netscape.com's Webmail - among other sites. Form textarea.
*** Bug 251041 has been marked as a duplicate of this bug. ***
A future fix will be dependent on the GetNextTabbable() rewrite in bug 250006, and would make use of IsFocusable()
Attachment #152972 - Flags: superreview?(jst)
Attachment #152972 - Flags: review?(bryner)
Attachment #152972 - Flags: review?(bryner) → review+
Attachment #152972 - Flags: superreview?(jst) → superreview+
Attachment #152972 - Flags: approval1.4.3?
Comment on attachment 152972 [details] [diff] [review] Safe fix for 1.8a a=mkaply for 1.8a2
Attachment #152972 - Flags: approval1.4.3? → approval1.8a2+
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
*** Bug 250764 has been marked as a duplicate of this bug. ***
Verified FIXED using 2004-07-13-08 on Windows XP.
Status: RESOLVED → VERIFIED
Flags: blocking1.8a2?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: