Bug 250692. Can't select in textarea with tabindex. r=bryner, sr=jst, a=mkaply